# mega-cli-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
src/: config.rs  format.rs  main.rs
src/commands/: compare.rs  delete.rs  follow.rs  get.rs  list.rs  mkdir.rs  mod.rs  put.rs  rename.rs  tree.rs
src/commands/auth/: login.rs  logout.rs  me.rs  mod.rs
src/commands/config/: edit.rs  mod.rs  path.rs
src/serde_utils/duration/: deserialize.rs  mod.rs  serialize.rs
src/utils/: mod.rs  nodes.rs  terminal.rs
