[package]
name = "mega-cli"
version = "0.1.3"
edition = "2021"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "A command-line tool for interacting with MEGA"
repository = "https://github.com/Hirevo/mega-cli-rs"
documentation = "https://docs.rs/mega-cli"
keywords = ["mega", "api", "cloud", "storage", "cli"]
categories = ["command-line-utilities", "web-programming", "web-programming::http-client"]
license = "MIT OR Apache-2.0"

[dependencies]
mega = "0.8.0"
reqwest = "0.12.8"

# Async runtime
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal", "process"] }
tokio-util = { version = "0.7.12", features = ["compat"] }

# CLI utils
clap = { version = "4.5.20", features = ["derive", "env"] }
confy = "0.6.1"
console = "0.15.8"
indicatif = "0.17.8"
dialoguer = "0.11.0"
text_trees = "0.1.2"
shell-words = "1.1.0"

# Error handling
color-eyre = "0.6.3"

# Logging
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Async utils
futures = "0.3.31"
sluice = "0.5.5"
async-read-progress = "0.2.0"
async-channel = "2.3.1"

# Data formats
url = { version = "2.5.2", features = ["serde"] }
serde = "1.0.210"
chrono = "0.4.38"

# Miscellaneous
filetime = "0.2.25"
once_cell = "1.20.2"
